--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple, modern web application for booking and viewing clinic appointments. Built with HTML, CSS, and JavaScript. Appointments are stored in your browser's local storage.",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,11 +18,14 @@
   "bugs": {
     "url": "https://github.com/UncleB77/healthcare-appointment-system/issues"
   },
-  "homepage": "https://github.com/UncleB77/healthcare-appointment-system#readme",
+  "homepage": "https://UncleB77.github.io/healthcare-appointment-system",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.16.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
